ingress/demo-vs-mobile.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-vs
  namespace: demo
spec:
  hosts:
    - demo.mydomain.io
  gateways:
  - demo-ingress-gateway
  http:
  - match:
    - headers:
        user-agent:
          exact: mobile
    route:
     - destination:
        host: demo-svc.demo.svc.cluster.local
        subset: v1
        port:
          number: 80
  - route:
    - destination:
       host: demo-svc.demo.svc.cluster.local
       subset: v2
       port:
         number: 80
